iac/scripts/prometheus-template.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: NAME-ingress
  namespace: NSPACE
  annotations:
    kubernetes.io/ingress.class: private-ingress
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
spec:
  rules:
  - host: admin.dev-2.gcp-wescale.slavayssiere.fr
    http:
      paths:
      - path: /NAME/
        backend:
          serviceName: prometheus-operated
          servicePort: 9090
